infra/k8s-dev/api-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: us.gcr.io/challenge-pl/api
---
apiVersion: v1
kind: Service
metadata:
  name: api-srv
spec:
  selector:
    app: api
  ports:
    - name: api
      protocol: TCP
      port: 3000
      targetPort: 3000
